--- a/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
@@ -176,6 +176,8 @@
         <ImageButton
             android:id="@+id/menu_button"
             style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_marginTop="1dp"
+            android:background="@color/colorGrayLight"
             android:layout_width="@dimen/standard_button_height"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
@@ -226,7 +228,7 @@
                 android:layout_centerVertical="true"
                 android:layout_marginEnd="8dp"
                 android:src="@drawable/ic_lock_outline_black_24dp"
-                android:tint="#D4D8DC" />
+                android:tint="#eaeced" />
 
         </LinearLayout>
 
@@ -236,9 +238,9 @@
             android:layout_height="@dimen/standard_button_height"
             android:layout_alignParentEnd="true"
             android:layout_centerVertical="true"
+            android:background="@color/colorGrayLight"
             android:layout_marginStart="@dimen/height_1"
             android:layout_marginTop="1dp"
-            android:background="@null"
             android:src="@drawable/ic_more_horiz_black_24dp" />
 
         <LinearLayout
@@ -431,6 +433,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:clickable="true"
+        android:visibility="gone"
         android:elevation="3dp"
         android:focusable="false"
         tools:layout_height="0dp">
