workaround for null items in adapter

--- a/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_chat.xml
@@ -2,7 +2,11 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:id="@+id/clickOutsideContainer"
     android:layout_height="match_parent"
+    android:clickable="true"
+    android:descendantFocusability="afterDescendants"
+    android:focusable="false"
     android:background="@color/chatBackground"
     tools:context=".ui.fragment.other.ChatFragment"
     tools:paddingTop="0dp">
