--- a/SportsSideKick/app/src/main/res/layout/message_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/message_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
@@ -8,7 +7,6 @@
     android:layout_marginEnd="@dimen/margin_15">
 
     <ImageView
-        xmlns:app="http://schemas.android.com/apk/res-auto"
         android:id="@+id/profileImage"
         android:layout_width="@dimen/message_item_circle_image_size"
         android:layout_height="@dimen/message_item_circle_image_size"
@@ -42,13 +40,17 @@
             android:maxHeight="@dimen/height_80"
             android:scaleType="centerInside" />
 
-        <ImageView
+        <ImageButton
+            style="@style/Widget.AppCompat.Button.Borderless"
             android:id="@+id/play_button"
             android:layout_width="wrap_content"
+            android:clickable="false"
+            android:focusable="false"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:adjustViewBounds="true"
             android:maxHeight="@dimen/height_80"
+            android:padding="0dp"
             android:scaleType="centerInside"
             android:src="@drawable/play_button_icon" />
 
