fix deleting news comments

--- a/SportsSideKick/app/src/main/res/layout/message_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/message_item.xml
@@ -38,7 +38,7 @@
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:maxHeight="@dimen/height_80"
-            android:scaleType="centerInside" />
+            android:scaleType="centerCrop" />
 
         <ImageButton
             style="@style/Widget.AppCompat.Button.Borderless"
