--- a/SportsSideKick/app/src/main/res/layout/message_item_user.xml
+++ b/SportsSideKick/app/src/main/res/layout/message_item_user.xml
@@ -32,10 +32,11 @@
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:maxHeight="@dimen/height_80"
-            android:scaleType="centerInside" />
+            android:scaleType="centerCrop" />
 
         <ImageButton
             android:id="@+id/play_button"
+            style="@style/Widget.AppCompat.Button.Borderless"
             android:layout_width="wrap_content"
             android:clickable="false"
             android:focusable="false"
