--- a/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
@@ -36,6 +36,8 @@
                 android:scrollbars="vertical"
                 android:layout_height="match_parent"
                 tools:layout_below="@id/login_holder"
+                android:clipToPadding="false"
+                android:paddingBottom="32dp"
                 tools:paddingStart="16dp"
                 tools:targetApi="lollipop" />
 
