--- a/SportsSideKick/app/src/main/res/layout/selectable_friend_item.xml
+++ b/SportsSideKick/app/src/main/res/layout/selectable_friend_item.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_height="wrap_content"
+    tools:layout_width="90dp">
 
     <ImageView
         android:id="@+id/image"
@@ -47,13 +48,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/image"
+        android:paddingEnd="@dimen/margin_10"
         android:layout_centerVertical="true"
         android:layout_marginBottom="@dimen/margin_5"
         android:layout_marginTop="@dimen/margin_5"
         android:maxLines="2"
         android:textAlignment="center"
-        android:textColor="@color/white"
+        android:textColor="@color/black"
+        tools:text="Test User"
         android:textSize="@dimen/font_size_9" />
-
 
 </RelativeLayout>
