--- a/SportsSideKick/app/src/main/res/layout/header_next_match.xml
+++ b/SportsSideKick/app/src/main/res/layout/header_next_match.xml
@@ -144,6 +144,7 @@
         android:layout_alignParentEnd="true"
         android:layout_margin="8dp"
         android:background="@drawable/button_tickets"
+        android:foreground="?selectableItemBackground"
         android:minWidth="0dp"
         android:paddingEnd="10dp"
         android:paddingStart="10dp"
