--- a/SportsSideKick/app/src/main/res/layout/header_next_match.xml
+++ b/SportsSideKick/app/src/main/res/layout/header_next_match.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/wall_top_image_container"
+    android:id="@+id/nextMatchContainer"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_marginBottom="-26dp"
@@ -9,7 +9,7 @@
     tools:showIn="@layout/fragment_wall">
 
     <ImageView
-        android:id="@+id/wall_top_image"
+        android:id="@+id/wallTopImage"
         android:layout_width="match_parent"
         android:layout_height="160dp"
         android:layout_alignParentStart="true"
@@ -39,10 +39,10 @@
         tools:visibility="gone" />
 
     <RelativeLayout
-        android:id="@+id/wall_top_info_container"
+        android:id="@+id/wallTopInfoContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/wall_top_image"
+        android:layout_alignBottom="@+id/wallTopImage"
         android:layout_alignParentStart="true"
         android:layout_marginBottom="24dp">
 
@@ -54,7 +54,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/wall_team_left_name"
+                android:id="@+id/wallLeftTeamName"
                 fontPath="fonts/TitilliumWeb-SemiBold.ttf"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -70,11 +70,11 @@
                 tools:text="SCP" />
 
             <ImageView
-                android:id="@+id/wall_team_left_image"
+                android:id="@+id/wallLeftTeamImage"
                 android:layout_width="60dp"
                 android:layout_height="@dimen/height_70"
                 android:layout_centerVertical="true"
-                android:layout_toEndOf="@id/wall_team_left_name"
+                android:layout_toEndOf="@id/wallLeftTeamName"
                 tools:src="@drawable/sportingportugal" />
 
             <TextView
@@ -90,7 +90,7 @@
                 tools:visibility="visible" />
 
             <ImageView
-                android:id="@+id/wall_team_right_image"
+                android:id="@+id/wallRightTeamImage"
                 android:layout_width="60dp"
                 android:layout_height="@dimen/height_70"
                 android:layout_centerVertical="true"
@@ -98,7 +98,7 @@
                 tools:src="@drawable/sportingportugal" />
 
             <TextView
-                android:id="@+id/wall_team_right_name"
+                android:id="@+id/wallRightTeamName"
                 fontPath="fonts/TitilliumWeb-SemiBold.ttf"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -127,7 +127,7 @@
             android:textColor="?nextMatchTextPhoneColor" />
 
         <TextView
-            android:id="@+id/wall_team_time"
+            android:id="@+id/wallTeamTime"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/wall_team_next_match"
@@ -140,7 +140,7 @@
         android:id="@+id/buttonTickets"
         android:layout_width="wrap_content"
         android:layout_height="32dp"
-        android:layout_alignBottom="@id/wall_top_image"
+        android:layout_alignBottom="@id/wallTopImage"
         android:layout_alignParentEnd="true"
         android:layout_margin="8dp"
         android:background="@drawable/button_tickets"
