--- a/SportsSideKick/app/src/main/res/layout/next_match_view.xml
+++ b/SportsSideKick/app/src/main/res/layout/next_match_view.xml
@@ -60,14 +60,14 @@
             app:autoSizeMinTextSize="20sp"
             app:autoSizeStepGranularity="2sp"
             app:autoSizeTextType="uniform"
-            app:layout_constraintBottom_toTopOf="@id/nextMatchContainer"
+            app:layout_constraintBottom_toTopOf="@id/nextMatchSplashContainer"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
             tools:text="@string/slogan" />
 
         <RelativeLayout
-            android:id="@+id/nextMatchContainer"
+            android:id="@+id/nextMatchSplashContainer"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/label"
@@ -202,7 +202,7 @@
             android:id="@+id/fc_logo"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_below="@id/nextMatchContainer"
+            android:layout_below="@id/nextMatchSplashContainer"
             android:layout_centerHorizontal="true"
             android:layout_centerVertical="true"
             android:src="@drawable/logo_fc"
