--- a/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
+++ b/SportsSideKick/app/src/main/res/layout/fragment_wall.xml
@@ -1,122 +1,64 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ui.fragment.content.WallFragment"
-    tools:ignore="ContentDescription,MissingPrefix,RtlHardcoded,RtlSymmetry">
+    tools:context=".ui.fragment.content.WallFragment">
+
+    <!--For XML preview only, actual header is in the adapter-->
+    <include
+        android:id="@+id/include"
+        layout="@layout/header_next_match"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:visibility="visible" />
+
+    <!--For XML preview only, actual header is in the adapter-->
+    <include
+        android:id="@+id/include2"
+        layout="@layout/header_login_invitation"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/include"
+        tools:visibility="visible" />
 
     <android.support.v4.widget.SwipeRefreshLayout
         android:id="@+id/swipeRefreshLayout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_above="@id/container"
-        android:descendantFocusability="blocksDescendants"
-        android:enabled="false">
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:enabled="false"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/include2">
 
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
-
-            <!--For XML preview only, actual header is in the adapter-->
-            <include
-                layout="@layout/header_next_match"
-                android:visibility="gone"
-                tools:visibility="visible" />
-
-            <!--For XML preview only, actual header is in the adapter-->
-            <!--<include-->
-            <!--layout="@layout/header_login_invitation"-->
-            <!--android:visibility="gone"-->
-            <!--tools:visibility="visible" />-->
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/recyclerView"
-                android:layout_width="match_parent"
-                android:scrollbars="vertical"
-                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-                android:layout_height="match_parent"
-                tools:layout_below="@id/login_holder"
-                android:clipToPadding="false"
-                android:paddingBottom="32dp"
-                tools:paddingStart="16dp"
-                tools:targetApi="lollipop" />
-
-        </RelativeLayout>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/recyclerView"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:clipToPadding="false"
+            android:enabled="false"
+            android:paddingBottom="32dp"
+            android:scrollbars="vertical"
+            app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+            tools:paddingStart="16dp" />
 
     </android.support.v4.widget.SwipeRefreshLayout>
-
-    <View
-        android:id="@+id/shadow"
-        android:layout_width="fill_parent"
-        android:layout_height="@dimen/height_2"
-        android:layout_above="@id/fragment_wall_bottom_bar"
-        android:background="@drawable/top_gradient_drawable" />
-
-    <RelativeLayout
-        android:id="@+id/fragment_wall_bottom_bar"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/standard_button_height"
-        android:layout_above="@id/shadow_1"
-        android:layout_alignParentStart="true"
-        android:animateLayoutChanges="true"
-        android:background="?phoneWallMenuBackground"
-        android:clickable="true"
-        android:gravity="center"
-        android:visibility="gone">
-
-        <Button
-            android:id="@+id/fragment_wall_new_post"
-            android:layout_width="@dimen/wall_button_size"
-            android:layout_height="@dimen/wall_button_size"
-            android:layout_marginBottom="@dimen/margin_10"
-            android:layout_marginEnd="@dimen/padding_8"
-            android:layout_marginStart="@dimen/padding_16"
-            android:layout_marginTop="@dimen/margin_10"
-            android:layout_toStartOf="@+id/fragment_wall_filter"
-            android:background="@drawable/wall_new_post_selector" />
-
-        <Button
-            android:id="@+id/fragment_wall_filter"
-            android:layout_width="@dimen/wall_button_size"
-            android:layout_height="@dimen/wall_button_size"
-            android:layout_centerHorizontal="true"
-            android:layout_marginBottom="@dimen/margin_10"
-            android:layout_marginEnd="@dimen/margin_20"
-            android:layout_marginStart="@dimen/margin_20"
-            android:layout_marginTop="@dimen/margin_10"
-            android:background="@drawable/wall_filter_selector" />
-
-        <Button
-            android:id="@+id/fragment_wall_search"
-            android:layout_width="@dimen/wall_button_size"
-            android:layout_height="@dimen/wall_button_size"
-            android:layout_marginBottom="@dimen/margin_10"
-            android:layout_marginEnd="@dimen/padding_16"
-            android:layout_marginStart="@dimen/padding_8"
-            android:layout_marginTop="@dimen/margin_10"
-            android:layout_toEndOf="@id/fragment_wall_filter"
-            android:background="@drawable/wall_search_selector" />
-    </RelativeLayout>
-
-    <View
-        android:id="@+id/shadow_1"
-        android:layout_width="fill_parent"
-        android:layout_height="@dimen/height_1dp"
-        android:layout_alignParentBottom="true"
-        android:background="@drawable/top_gradient_drawable"
-        android:visibility="gone" />
 
     <android.support.design.widget.FloatingActionButton
         android:id="@+id/fab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentEnd="true"
-        android:layout_gravity="bottom"
         android:layout_margin="@dimen/fab_margin"
         android:src="@drawable/ic_more_horiz_white_24dp"
-        android:tint="@color/white"
-        app:backgroundTint="@color/black" />
+        app:backgroundTint="@color/black"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
-</RelativeLayout>
+</android.support.constraint.ConstraintLayout>
