--- a/SportsSideKick/app/src/main/res/layout/wall_item_stats.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_stats.xml
@@ -47,7 +47,7 @@
         android:layout_alignParentEnd="true"
         android:layout_alignParentTop="true"
         android:scaleType="centerCrop"
-        android:src="@drawable/news_holder_image"
+        tools:src="@drawable/news_holder_image"
         android:visibility="visible" />
 
     <TextView
