--- a/SportsSideKick/app/src/main/res/layout-large/news_list_item.xml
+++ b/SportsSideKick/app/src/main/res/layout-large/news_list_item.xml
@@ -8,7 +8,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:scaleType="centerCrop"
-        android:src="@drawable/news_holder_image"
+        tools:src="@drawable/news_holder_image"
         android:layout_above="@id/title_container"/>
 
     <RelativeLayout
