--- a/SportsSideKick/app/src/main/res/layout/wall_item_user_post.xml
+++ b/SportsSideKick/app/src/main/res/layout/wall_item_user_post.xml
@@ -20,7 +20,7 @@
         android:layout_height="@dimen/wall_image_size"
         android:layout_toEndOf="@id/strip"
         android:scaleType="centerCrop"
-        android:src="@drawable/news_holder_image"
+        tools:src="@drawable/news_holder_image"
         android:visibility="visible" />
 
     <ImageView
